--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -210,6 +210,11 @@ header {
                 bottom: 0.25rem;
             }
         }
+        .c,
+        .d {
+            text-align: right;
+            margin-right: 3rem;
+        }
     }
 }
 
